# ROS

mecademic_cartesio/: CMakeLists.txt  package.xml
mecademic_cartesio/config/: mecademic.yaml  mecademic_collision.yaml
mecademic_cartesio/launch/: mecademic_cartesio.launch  mecademic_collision.launch
mecademic_description/: generate_capsules.sh
mecademic_description/launch/: meca_500_r3.launch
mecademic_description/meshes/: buffer_and_slide_support_v17.stl  for_mesh_buffer_and_input_slide_support_new_v11.stl  for_mesh_buffer_and_input_slide_support_new_v21.stl  for_mesh_buffer_and_input_slide_support_new_v6.stl  for_mesh_pneumatic_tube_holder_new_v5.stl  gripper_finger_mesh_no_cable_metersv2.stl  gripper_finger_mesh_with_cable_metersv2.stl  linear_guide_base_meters.stl  linear_guide_mover_meters.stl  pneumatic_tube_holder_mesh_v2.stl
mecademic_description/srdf/: meca_500_r3.srdf  meca_500_r3_capsule.srdf
mecademic_description/urdf/: meca_500_r3.urdf.xacro  meca_500_r3_capsule.urdf.xacro
mecademic_description/urdf/capsule/: for_mesh_pneumatic_tube_holder_new_v5.stl.capsule  gripper_finger_mesh_no_cable_metersv2.stl.capsule  linear_guide_base_meters.stl.capsule  linear_guide_mover_meters.stl.capsule  meca_500_r3_base_collision.stl.capsule  meca_500_r3_j1_collision.stl.capsule  meca_500_r3_j2_collision.stl.capsule  meca_500_r3_j3_collision.stl.capsule  meca_500_r3_j4_collision.stl.capsule  (+5 more)
mecademic_gazebo/: CMakeLists.txt  package.xml
mecademic_gazebo/launch/: mecademic_gazebo.launch
mecademic_viz/rviz/: cartesio.rviz  model.rviz
(+2 files in other folders)
