<?xml version="1.0"?>
<package format="2">
  <name>mecademic_gazebo</name>
  <version>0.0.0</version>
  <description>The mecademic_gazebo package</description>

  <maintainer email="marco@todo.todo">marco</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
